Fixed #about container
Forgot to change the height earlier, also adjusted margins so the
scrollbar is beside the main scroll bar instead of under it.

--- a/css.css
+++ b/css.css
@@ -57,8 +57,9 @@ h1 {
   position: absolute;
   left: 15em;
   top: 0px;
-  height: 16em;
-  padding: 2em 2em 0em 2em;
+  height: 21.25em;
+  padding: 2em 1.2em 0em 2em;
+  margin-right: 0.7em;
   overflow-y: scroll; }
 
 #face {
