--- a/sass.scss
+++ b/sass.scss
@@ -83,9 +83,10 @@ h1
   left:15em;
   top:0px;
 
-  height:16em;
-  padding: 2em 2em 0em 2em;
+  height: $top-height - $menu-height - 2em;
 
+  padding: 2em 1.2em 0em 2em;
+  margin-right: 0.7em;
   overflow-y: scroll;
 }
 #face
